# the-invincible-southern-soaring-eagle

./: .gitignore  BackgroundWidget.cpp  BackgroundWidget.h  CMakeLists.txt  ChessBoardWidget.cpp  ChessBoardWidget.h  CustomToolBar.cpp  CustomToolBar.h  CustomToolBar_2.cpp  CustomToolBar_2.h  Piece.h  PieceLoader.cpp  PieceLoader.h  README.md  clockwidget.cpp  clockwidget.h  game_state.cpp  game_state.h  main.cpp  mainwindow.cpp  mainwindow.h  menu_book.cpp  menu_book.h  menu_connection.cpp  menu_connection.h  menu_engine.cpp  menu_engine.h  menu_file.cpp  menu_file.h  menu_help.cpp  menu_help.h  menu_language.cpp  menu_language.h  menu_move.cpp  menu_move.h  menu_position.cpp  menu_position.h  menu_settings.cpp  menu_settings.h  menu_utils.cpp  (+7 more)
.github/workflows/: cmake-single-platform.yml
dialogs/: engine_settings_dialog.cpp  engine_settings_dialog.h
